@@ -7,15 +7,18 @@ our @ISA = qw(Log::Log4perl::Appender);
 use warnings;
 use strict;
 
+use IO::Handle;
+
 ##################################################
 sub new {
 ##################################################
     my($class, @options) = @_;
 
     my $self = {
-        name   => "unknown name",
-        stderr => 1,
-        utf8   => undef,
+        autoflush   => 0,
+        name        => "unknown name",
+        stderr      => 1,
+        utf8        => undef,
         @options,
     };
 
@@ -27,9 +30,17 @@ sub new {
         }
     }
 
+    if( $self->{autoflush} ) {
+        if( $self->{stderr} ) {
+            STDERR->autoflush(1);
+        } else {
+            STDOUT->autoflush(1);
+        }
+    }
+
     bless $self, $class;
 }
-    
+
 ##################################################
 sub log {
 ##################################################
@@ -57,6 +68,7 @@ Log::Log4perl::Appender::Screen - Log to STDOUT/STDERR
     use Log::Log4perl::Appender::Screen;
 
     my $app = Log::Log4perl::Appender::Screen->new(
+      autoflush => 1,
       stderr    => 0,
       utf8      => 1,
     );
@@ -68,13 +80,13 @@ Log::Log4perl::Appender::Screen - Log to STDOUT/STDERR
 This is a simple appender for writing to STDOUT or STDERR.
 
 The constructor C<new()> take an optional parameter C<stderr>,
-if set to a true value, the appender will log to STDERR. 
-The default setting for C<stderr> is 1, so messages will be logged to 
+if set to a true value, the appender will log to STDERR.
+The default setting for C<stderr> is 1, so messages will be logged to
 STDERR by default.
 
 If C<stderr>
 is set to a false value, it will log to STDOUT (or, more accurately,
-whichever file handle is selected via C<select()>, STDOUT by default). 
+whichever file handle is selected via C<select()>, STDOUT by default).
 
 Design and implementation of this module has been greatly inspired by
 Dave Rolsky's C<Log::Dispatch> appender framework.
@@ -90,13 +102,26 @@ value:
 This will issue the necessary binmode command to the selected output
 channel (stderr/stdout).
 
+To enable L<autoflush|perlvar/"HANDLE-E<gt>autoflush( EXPR )">, set the
+C<autoflush> option to a true value:
+
+    my $app = Log::Log4perl::Appender::Screen->new(
+      autoflush => 1,
+    );
+
+This will issue the necessary autoflush command to the selected output
+channel (stderr/stdout).
+
+This is required in containers, especially when the log volume is low, to
+not buffer the log messages and cause a significant delay.
+
 =head1 LICENSE
 
-Copyright 2002-2013 by Mike Schilli E<lt>m@perlmeister.comE<gt> 
+Copyright 2002-2013 by Mike Schilli E<lt>m@perlmeister.comE<gt>
 and Kevin Goess E<lt>cpan@goess.orgE<gt>.
 
 This library is free software; you can redistribute it and/or modify
-it under the same terms as Perl itself. 
+it under the same terms as Perl itself.
 
 =head1 AUTHOR
 
@@ -106,7 +131,7 @@ Please contribute patches to the project on Github:
 
 Send bug reports or requests for enhancements to the authors via our
 
-MAILING LIST (questions, bug reports, suggestions/patches): 
+MAILING LIST (questions, bug reports, suggestions/patches):
 log4perl-devel@lists.sourceforge.net
 
 Authors (please contact them via the list above, not directly):
@@ -117,8 +142,8 @@ Contributors (in alphabetical order):
 Ateeq Altaf, Cory Bennett, Jens Berthold, Jeremy Bopp, Hutton
 Davidson, Chris R. Donnelly, Matisse Enzer, Hugh Esco, Anthony
 Foiani, James FitzGibbon, Carl Franks, Dennis Gregorovic, Andy
-Grundman, Paul Harrington, Alexander Hartmaier  David Hull, 
-Robert Jacobson, Jason Kohles, Jeff Macdonald, Markus Peter, 
-Brett Rann, Peter Rabbitson, Erik Selberg, Aaron Straup Cope, 
+Grundman, Paul Harrington, Alexander Hartmaier  David Hull,
+Robert Jacobson, Jason Kohles, Jeff Macdonald, Markus Peter,
+Brett Rann, Peter Rabbitson, Erik Selberg, Aaron Straup Cope,
 Lars Thegler, David Viner, Mac Yang.
 
